// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth render should change submit button text if loading and make it disabled 1`] = `
<form data-test="auth-form" message="foo">
  <form-field-stub>
    <message-stub data-test="form-message">Log in to your Endpass account to access site actions</message-stub>
  </form-field-stub>
  <!---->
  <form-field-stub>
    <div class="auth__fields-as-line">
      <v-input-stub placeholder="Enter your email..." name="email" value="" invalid="true" autofocus="true" type="email" data-test="email-input"></v-input-stub>
      <v-button-stub disabled="true" type="primary" submit="true" data-test="submit-button">Loading...</v-button-stub>
    </div>
  </form-field-stub>
  <form-controls-stub>
    <google-auth-button-stub></google-auth-button-stub>
    <git-auth-button-stub></git-auth-button-stub>
  </form-controls-stub>
  <form-controls-stub>
    <v-checkbox-stub value="true" name="checkbox">
      I accept the
      <a href="https://endpass.com/terms/" target="_blank">Terms of Service</a>
      and
      <a href="https://endpass.com/privacy/" target="_blank">Privacy Policy</a>.
    </v-checkbox-stub>
  </form-controls-stub>
</form>
`;

exports[`Auth render should correctly render Auth component 1`] = `
<form data-test="auth-form">
  <form-field-stub>
    <message-stub data-test="form-message">Log in to your Endpass account to access site actions</message-stub>
  </form-field-stub>
  <!---->
  <form-field-stub>
    <div class="auth__fields-as-line">
      <v-input-stub placeholder="Enter your email..." name="email" value="" invalid="true" autofocus="true" type="email" data-test="email-input"></v-input-stub>
      <v-button-stub disabled="true" type="primary" submit="true" data-test="submit-button">Log in</v-button-stub>
    </div>
  </form-field-stub>
  <form-controls-stub>
    <google-auth-button-stub></google-auth-button-stub>
    <git-auth-button-stub></git-auth-button-stub>
  </form-controls-stub>
  <form-controls-stub>
    <v-checkbox-stub value="true" name="checkbox">
      I accept the
      <a href="https://endpass.com/terms/" target="_blank">Terms of Service</a>
      and
      <a href="https://endpass.com/privacy/" target="_blank">Privacy Policy</a>.
    </v-checkbox-stub>
  </form-controls-stub>
</form>
`;
